Fixed: Scrollbar not on right side of window, Double scrollbar on mobile width and table border width

--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -213,7 +213,6 @@
 		background-clip: padding-box;
 		overflow-x: auto;
 		overflow-y: hidden;
-		width: 100%;
 
 		th,
 		td {
